<resources>
    <string name="app_name">NorthernAndroidProject</string>
    <string name="help">Help &amp; FAQs</string>
    <string name="message_internet_not_available">Internet Not Available</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="internet_error">Please check your internet connection or try again later.</string>
    <string name="shared_preference_file">com.shoppingapp</string>
    <string name="login">Login</string>
    <string name="user_name_text">With Email</string>
    <string name="user_name">Email</string>
    <string name="password">Password</string>
    <string name="forget">Forgot your password?</string>
    <string name="create_now">Not registered yet… click here</string>
    <string name="register">Sign Up</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile No</string>
    <string name="email">Email Address</string>
    <string name="deliver_to_this_address">Deliver to this address</string>
    <string name="add_new_address">Add new Address</string>
    <string name="no_address_found">No Address Found</string>
    <string name="username_error">Please enter Email or Mobile No</string>
    <string name="password_error">Please enter your password</string>
    <string name="name_error">Please enter your Name</string>
    <string name="mobile_no_error">Please enter your correct Mobile No.</string>
    <string name="email_error">Please enter correct Email Address</string>
    <string name="app_home">Liberty Market</string>
    <string name="categories">Categories</string>
    <string name="subcategory">Subcategories</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_no">Mobile No</string>
    <string name="enter_address">Enter address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="address_error">Enter Address</string>
    <string name="city_error">Enter City</string>
    <string name="state_error">Enter State</string>
    <string name="pincode_error">Enter Pincode</string>
    <string name="size">Size</string>
    <string name="colors">Colors</string>
    <string name="category">Category</string>
    <string name="sizes">Sizes</string>
    <string name="order_heading">Cart</string>
    <string name="total_amount">Total Amount</string>
    <string name="cart_text_zero">0</string>
    <string name="enter_coupon">Enter Coupon</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="description">Description</string>
    <string name="buy_now">Buy Now</string>
    <string name="view_cart">View Cart</string>
    <string name="qty">Qty:</string>
    <string name="Remove">Remove</string>
    <string name="changeQuantity">Change \n Quantity</string>
    <string name="confirm_login_text">You have to login to place the order</string>
    <string name="login_order">You have to login to see order history</string>
    <string name="address_list">Select Address</string>
    <string name="Address">Address</string>
    <string name="contact_name">Contact Name*</string>
    <string name="mobile_no">Mobile No*</string>
    <string name="address_text">Address*</string>
    <string name="city_text">City*</string>
    <string name="PinCode">PinCode*</string>
    <string name="State">State*</string>
    <string name="ship_address">Ship to this address</string>
    <string name="update_address">Update Address</string>
    <string name="delete_product">Product is out of stock please remove.</string>
    <string name="check_out">Checkout</string>
    <string name="change">Change</string>
    <string name="product_detail">Product Detail</string>
    <string name="product_price">Product Price</string>
    <string name="discount_price">Discount Price</string>
    <string name="coupon">Coupon</string>
    <string name="total_price">Total price</string>
    <string name="apply">Apply</string>
    <string name="close">Close</string>
    <string name="order_history">Order History</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="placeorder">Place Order COD</string>
    <string name="applied">Applied</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="estimate_time">Estimate time</string>
    <string name="payment_failure">Payment Failure</string>
    <string name="oops">Oops!</string>
    <string name="paymentFailDescription">We\'re sorry, but something went wrong. Please try again later.</string>
    <string name="paymentFailNote">Note: In case we receive your payment, we will contact you in some time. Feel free to contact us any time. Thanks!</string>
    <string name="order_no">Order No</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="view_detail">View Detail</string>
    <string name="feeds">Feeds</string>
    <string name="no_posts">No Posts</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="order_history_detail">Order Detail</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="return_order">Return-Order</string>
    <string name="log_in">Log In</string>
    <string name="home">Home</string>
    <string name="my_orders">My Orders</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="chat"> Chat Now</string>
    <string name="comments">Comments</string>

    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="sell_your_mobile_heading">Sell Your Mobile</string>
    <string name="add_pics_your_product">Add photos of your mobile</string>
    <string name="type">Type</string>
    <string name="warranty">Warranty</string>
    <string name="non_warranty">Non-Warranty</string>
    <string name="repair_text">Repaired</string>
    <string name="not_repair">Not repaired</string>
    <string name="below_average">Below average</string>
    <string name="average">average</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="your_price">Enter selling price</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="submit">Submit</string>
    <string name="description_of_products">Type, brands, models etc</string>
    <string name="sell">Sell</string>
    <string name="enter_10_digit_phone_no">Please Enter the 10 Digits Phone number</string>
    <string name="brand">Brand</string>
    <string name="descripition">Descripition</string>
    <string name="selling_price">Selling Price</string>
    <string name="phone_number">Phone number</string>
    <string name="old_phone">Click here to sell your old phone</string>
    <string name="sell_phone_confirm">Confirmation</string>
    <string name="confirmation_message">Your request is successfully submitted to Vendor.</string>
    <string name="chat_error">Please Login for chat.</string>
    <string name="mobi_mania">Mobi Mania</string>
    <string name="update">Update</string>

    <string-array name="warranty_left_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


    <string-array name="mobile_phone_brand_names_array">
        <item>Samsung</item>
        <item>iPhone</item>
        <item>Micromax</item>
        <item>Nokia</item>
        <item>Sony</item>
        <item>Mi</item>
        <item>HTC</item>
        <item>Lenovo</item>
        <item>Gionee</item>
        <item>Motorola</item>
        <item>Oppo</item>
        <item>Vivo</item>
        <item>Intex</item>
        <item>Lava</item>
        <item>LG</item>
        <item>Asus</item>
        <item>BlackBerry</item>
        <item>Karbonn</item>
        <item>LYF</item>
        <item>Others Mobiles</item>
    </string-array>
    <string-array name="product_type_array">
        <item>Mobile Phones</item>
        <item>Tablets</item>
        <item>Accessories</item>
    </string-array>

    <string-array name="tablets_brand_names_array">
        <item>Samsung</item>
        <item>iPads</item>
        <item>Others Tablets</item>
    </string-array>

    <plurals name="post_time">
        <item quantity="one">· %1$s</item>
        <item quantity="other">%1$s</item>
    </plurals>
    <plurals name="comment_count">
        <item quantity="one">%1$d Comment</item>
        <item quantity="other">%1$d Comments</item>
    </plurals>

    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>
</resources>
