<?xml version="1.0" encoding="utf-8"?><!--<layout >-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <RelativeLayout
            android:id="@+id/login_view_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="-10dp"
                android:fontFamily="@font/montserrat_black"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/login_text_color"
                android:textSize="55sp" />


            <ScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_text"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:errorTextAppearance="@style/TextLabelError"
                        app:hintTextAppearance="@style/TextLabelSmall">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/user_name"
                            android:imeOptions="actionNext"
                            android:inputType="textNoSuggestions"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:errorTextAppearance="@style/TextLabelError"
                        app:hintTextAppearance="@style/TextLabelSmall"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@drawable/toggle_eye"
                        app:passwordToggleTintMode="src_atop">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:padding="3dp"
                        android:text="@string/forget"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/fb_error_button"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/create_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scroll_view"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:text="@string/create_now"
                    android:textColor="@color/white"
                    android:textSize="17sp" />


            </LinearLayout>


        </RelativeLayout>






    </RelativeLayout>
</layout>

