<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/signUpView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/black">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-4dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="-10dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/login_text_color"
            android:textSize="55sp" />

        <ScrollView
            android:id="@+id/scroll_view_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_text"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:padding="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/TextLabelError"
                    app:hintTextAppearance="@style/TextLabelSmall">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:inputType="textNoSuggestions|textVisiblePassword"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/TextLabelError"
                    app:hintTextAppearance="@style/TextLabelSmall">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/mobile"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/TextLabelError"
                    app:hintTextAppearance="@style/TextLabelSmall">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/TextLabelError"
                    app:hintTextAppearance="@style/TextLabelSmall"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@drawable/toggle_eye"
                    app:passwordToggleTintMode="src_atop">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_signup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/fb_error_button"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>
