<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
        <include
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            layout="@layout/common_header"
            android:id="@+id/header"/>
        <RelativeLayout
            android:id="@+id/signUpView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_below="@id/header"
            android:background="@color/black">


            <ScrollView
                android:id="@+id/scroll_view_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/profile_image_large"
                        android:layout_height="@dimen/profile_image_large"
                        app:srcCompat="@drawable/user_round"
                        android:layout_gravity="center_horizontal"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:enabled="false"
                        app:errorTextAppearance="@style/TextLabelError"
                        app:hintTextAppearance="@style/TextLabelSmall">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/name"
                            android:imeOptions="actionNext"
                            android:inputType="textNoSuggestions|textVisiblePassword"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:enabled="false"
                        app:errorTextAppearance="@style/TextLabelError"
                        app:hintTextAppearance="@style/TextLabelSmall">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/mobile"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:enabled="false"
                        app:errorTextAppearance="@style/TextLabelError"
                        app:hintTextAppearance="@style/TextLabelSmall">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>


<!--                    <com.google.android.material.textfield.TextInputLayout-->
<!--                        style="@style/textInput"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        app:errorEnabled="true"-->
<!--                        app:errorTextAppearance="@style/TextLabelError"-->
<!--                        app:hintTextAppearance="@style/TextLabelSmall"-->
<!--                        app:passwordToggleEnabled="true"-->
<!--                        app:passwordToggleTint="@drawable/toggle_eye"-->
<!--                        app:passwordToggleTintMode="src_atop">-->

<!--                        <com.google.android.material.textfield.TextInputEditText-->
<!--                            android:id="@+id/password_signup"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent"-->
<!--                            android:drawablePadding="5dp"-->
<!--                            android:fontFamily="@font/montserrat_regular"-->
<!--                            android:hint="@string/password"-->
<!--                            android:imeOptions="actionDone"-->
<!--                            android:inputType="textPassword"-->
<!--                            android:singleLine="true"-->
<!--                            android:textColor="@color/white"-->
<!--                            android:textColorHint="@color/white"-->
<!--                            android:textSize="15sp" />-->

<!--                    </com.google.android.material.textfield.TextInputLayout>-->

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/fb_error_button"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/update"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                </LinearLayout>
            </ScrollView>

        </RelativeLayout>
    </RelativeLayout>
</layout>
